k8s/post-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-db
  template:
    metadata:
      labels:
        app: post-db
    spec:
      containers:
      - name: post-db
        image: postgres:16
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: post-db-service
spec:
  selector:
    app: post-db
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
